feat: add capacity to check letter validity against word of the day

--- a/src/views/Game/components/Letter.module.css
+++ b/src/views/Game/components/Letter.module.css
@@ -14,3 +14,15 @@
   text-shadow: 0 0 0 white;
   outline: auto;
 }
+
+.green {
+  background-color: #538d4e;
+}
+
+.yellow {
+  background-color: #b59f3b;
+}
+
+.grey {
+  background-color: rgb(39, 43, 63);
+}
